// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
Array [
  Array [
    "changelog",
    undefined,
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={true}
    overlay={
      <ChangelogPopup
        issue={
          Object {
            "author": "john.david.dalton@gmail.com",
            "creationDate": "2017-03-01T09:36:01+0100",
            "key": "issuekey",
          }
        }
        onFail={[MockFunction]}
      />
    }
  >
    <Tooltip
      mouseEnterDelay={0.5}
      overlay={
        <DateTimeFormatter
          date="2017-03-01T09:36:01+0100"
        />
      }
    >
      <Button
        className="button-link issue-action issue-action-with-options js-issue-show-changelog"
        onClick={[Function]}
      >
        <span
          className="issue-meta-label"
        >
          <DateFromNow
            date="2017-03-01T09:36:01+0100"
          />
        </span>
        <i
          className="icon-dropdown little-spacer-left"
        />
      </Button>
    </Tooltip>
  </Toggler>
</div>
`;

exports[`should render correctly 1`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={false}
    overlay={
      <ChangelogPopup
        issue={
          Object {
            "author": "john.david.dalton@gmail.com",
            "creationDate": "2017-03-01T09:36:01+0100",
            "key": "issuekey",
          }
        }
        onFail={[MockFunction]}
      />
    }
  >
    <Tooltip
      mouseEnterDelay={0.5}
      overlay={
        <DateTimeFormatter
          date="2017-03-01T09:36:01+0100"
        />
      }
    >
      <Button
        className="button-link issue-action issue-action-with-options js-issue-show-changelog"
        onClick={[Function]}
      >
        <span
          className="issue-meta-label"
        >
          <DateFromNow
            date="2017-03-01T09:36:01+0100"
          />
        </span>
        <i
          className="icon-dropdown little-spacer-left"
        />
      </Button>
    </Tooltip>
  </Toggler>
</div>
`;
